# my_move_camera

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h
cmake/: rk3566-toolchain.cmake
skill/design-embedded-ui-architecture/: SKILL.md
skill/design-embedded-ui-architecture/agents/: openai.yaml
skill/design-embedded-ui-architecture/references/: architecture-patterns.md  review-checklist.md
src/: camera_capture.c  camera_capture.h  camera_media.c  camera_media.h  camera_recorder.c  camera_recorder.h  drm_display.c  drm_display.h  main.c
src/page/inc/: camera_page.h  quick_settings_page.h
src/page/src/: camera_page.c  font_alibaba_puhuiti_20.c  quick_settings_page.c
src/wifi/inc/: wifi_manager.h
src/wifi/src/: wifi_manager.c
